parse.output
   0  $accept : %entry% $end

   1  program : class_decls decls EOF

   2  class_decls :
   3              | cdecl class_decls

   4  cdecl : modifer CLASS ID LBRACE decls RBRACE

   5  modifer : PRIVATE
   6          | PUBLIC
   7          | PROTECTED

   8  decls :
   9        | vdecl SEMI decls
  10        | fdecl decls

  11  vdecl_list :
  12             | vdecl SEMI vdecl_list

  13  vdecl : typ ID

  14  typ : primitive

  15  primitive : INT
  16            | BOOL
  17            | STR

  18  fdecl : vdecl LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

  19  formals_opt :
  20              | formals_list

  21  formals_list : vdecl
  22               | vdecl COMMA formals_list

  23  stmt_list :
  24            | stmt stmt_list

  25  stmt : expr SEMI
  26       | LBRACE stmt_list RBRACE
  27       | IF LPAREN expr RPAREN stmt ELSE stmt
  28       | WHILE LPAREN expr RPAREN stmt
  29       | FOR LPAREN expr SEMI expr SEMI expr RPAREN stmt
  30       | RETURN expr SEMI

  31  expr : NUM
  32       | BLIT
  33       | STRLIT
  34       | ID
  35       | expr PLUS expr
  36       | expr MINUS expr
  37       | expr TIMES expr
  38       | expr DIVIDE expr
  39       | expr MOD expr
  40       | expr EQ expr
  41       | expr NEQ expr
  42       | expr LESSER expr
  43       | expr LESSEREQ expr
  44       | expr GREATER expr
  45       | expr GREATEREQ expr
  46       | expr AND expr
  47       | expr OR expr
  48       | ID ASSIGN expr
  49       | LPAREN expr RPAREN
  50       | ID LPAREN args_opt RPAREN

  51  args_opt :
  52           | args

  53  args : expr
  54       | expr COMMA args

  55  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (55)
	class_decls : .  (2)

	PRIVATE  shift 3
	PUBLIC  shift 4
	PROTECTED  shift 5
	INT  reduce 2
	BOOL  reduce 2
	STR  reduce 2
	EOF  reduce 2

	program  goto 6
	class_decls  goto 7
	cdecl  goto 8
	modifer  goto 9


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	modifer : PRIVATE .  (5)

	.  reduce 5


state 4
	modifer : PUBLIC .  (6)

	.  reduce 6


state 5
	modifer : PROTECTED .  (7)

	.  reduce 7


state 6
	%entry% : '\001' program .  (55)

	.  reduce 55


state 7
	program : class_decls . decls EOF  (1)
	decls : .  (8)

	INT  shift 10
	BOOL  shift 11
	STR  shift 12
	EOF  reduce 8

	decls  goto 13
	vdecl  goto 14
	fdecl  goto 15
	typ  goto 16
	primitive  goto 17


state 8
	class_decls : cdecl . class_decls  (3)
	class_decls : .  (2)

	PRIVATE  shift 3
	PUBLIC  shift 4
	PROTECTED  shift 5
	INT  reduce 2
	BOOL  reduce 2
	STR  reduce 2
	EOF  reduce 2

	class_decls  goto 18
	cdecl  goto 8
	modifer  goto 9


state 9
	cdecl : modifer . CLASS ID LBRACE decls RBRACE  (4)

	CLASS  shift 19
	.  error


state 10
	primitive : INT .  (15)

	.  reduce 15


state 11
	primitive : BOOL .  (16)

	.  reduce 16


state 12
	primitive : STR .  (17)

	.  reduce 17


state 13
	program : class_decls decls . EOF  (1)

	EOF  shift 20
	.  error


state 14
	decls : vdecl . SEMI decls  (9)
	fdecl : vdecl . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (18)

	SEMI  shift 21
	LPAREN  shift 22
	.  error


state 15
	decls : fdecl . decls  (10)
	decls : .  (8)

	INT  shift 10
	BOOL  shift 11
	STR  shift 12
	RBRACE  reduce 8
	EOF  reduce 8

	decls  goto 23
	vdecl  goto 14
	fdecl  goto 15
	typ  goto 16
	primitive  goto 17


state 16
	vdecl : typ . ID  (13)

	ID  shift 24
	.  error


state 17
	typ : primitive .  (14)

	.  reduce 14


state 18
	class_decls : cdecl class_decls .  (3)

	.  reduce 3


state 19
	cdecl : modifer CLASS . ID LBRACE decls RBRACE  (4)

	ID  shift 25
	.  error


state 20
	program : class_decls decls EOF .  (1)

	.  reduce 1


state 21
	decls : vdecl SEMI . decls  (9)
	decls : .  (8)

	INT  shift 10
	BOOL  shift 11
	STR  shift 12
	RBRACE  reduce 8
	EOF  reduce 8

	decls  goto 26
	vdecl  goto 14
	fdecl  goto 15
	typ  goto 16
	primitive  goto 17


state 22
	fdecl : vdecl LPAREN . formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (18)
	formals_opt : .  (19)

	INT  shift 10
	BOOL  shift 11
	STR  shift 12
	RPAREN  reduce 19

	vdecl  goto 27
	typ  goto 16
	primitive  goto 17
	formals_opt  goto 28
	formals_list  goto 29


state 23
	decls : fdecl decls .  (10)

	.  reduce 10


state 24
	vdecl : typ ID .  (13)

	.  reduce 13


state 25
	cdecl : modifer CLASS ID . LBRACE decls RBRACE  (4)

	LBRACE  shift 30
	.  error


state 26
	decls : vdecl SEMI decls .  (9)

	.  reduce 9


state 27
	formals_list : vdecl .  (21)
	formals_list : vdecl . COMMA formals_list  (22)

	COMMA  shift 31
	RPAREN  reduce 21


state 28
	fdecl : vdecl LPAREN formals_opt . RPAREN LBRACE vdecl_list stmt_list RBRACE  (18)

	RPAREN  shift 32
	.  error


state 29
	formals_opt : formals_list .  (20)

	.  reduce 20


state 30
	cdecl : modifer CLASS ID LBRACE . decls RBRACE  (4)
	decls : .  (8)

	INT  shift 10
	BOOL  shift 11
	STR  shift 12
	RBRACE  reduce 8

	decls  goto 33
	vdecl  goto 14
	fdecl  goto 15
	typ  goto 16
	primitive  goto 17


state 31
	formals_list : vdecl COMMA . formals_list  (22)

	INT  shift 10
	BOOL  shift 11
	STR  shift 12
	.  error

	vdecl  goto 27
	typ  goto 16
	primitive  goto 17
	formals_list  goto 34


state 32
	fdecl : vdecl LPAREN formals_opt RPAREN . LBRACE vdecl_list stmt_list RBRACE  (18)

	LBRACE  shift 35
	.  error


state 33
	cdecl : modifer CLASS ID LBRACE decls . RBRACE  (4)

	RBRACE  shift 36
	.  error


state 34
	formals_list : vdecl COMMA formals_list .  (22)

	.  reduce 22


state 35
	fdecl : vdecl LPAREN formals_opt RPAREN LBRACE . vdecl_list stmt_list RBRACE  (18)
	vdecl_list : .  (11)

	INT  shift 10
	BOOL  shift 11
	STR  shift 12
	LPAREN  reduce 11
	LBRACE  reduce 11
	RBRACE  reduce 11
	IF  reduce 11
	WHILE  reduce 11
	FOR  reduce 11
	RETURN  reduce 11
	NUM  reduce 11
	BLIT  reduce 11
	STRLIT  reduce 11
	ID  reduce 11

	vdecl  goto 37
	vdecl_list  goto 38
	typ  goto 16
	primitive  goto 17


state 36
	cdecl : modifer CLASS ID LBRACE decls RBRACE .  (4)

	.  reduce 4


state 37
	vdecl_list : vdecl . SEMI vdecl_list  (12)

	SEMI  shift 39
	.  error


state 38
	fdecl : vdecl LPAREN formals_opt RPAREN LBRACE vdecl_list . stmt_list RBRACE  (18)
	stmt_list : .  (23)

	LPAREN  shift 40
	LBRACE  shift 41
	IF  shift 42
	WHILE  shift 43
	FOR  shift 44
	RETURN  shift 45
	NUM  shift 46
	BLIT  shift 47
	STRLIT  shift 48
	ID  shift 49
	RBRACE  reduce 23

	stmt_list  goto 50
	stmt  goto 51
	expr  goto 52


state 39
	vdecl_list : vdecl SEMI . vdecl_list  (12)
	vdecl_list : .  (11)

	INT  shift 10
	BOOL  shift 11
	STR  shift 12
	LPAREN  reduce 11
	LBRACE  reduce 11
	RBRACE  reduce 11
	IF  reduce 11
	WHILE  reduce 11
	FOR  reduce 11
	RETURN  reduce 11
	NUM  reduce 11
	BLIT  reduce 11
	STRLIT  reduce 11
	ID  reduce 11

	vdecl  goto 37
	vdecl_list  goto 53
	typ  goto 16
	primitive  goto 17


state 40
	expr : LPAREN . expr RPAREN  (49)

	LPAREN  shift 40
	NUM  shift 46
	BLIT  shift 47
	STRLIT  shift 48
	ID  shift 49
	.  error

	expr  goto 54


state 41
	stmt : LBRACE . stmt_list RBRACE  (26)
	stmt_list : .  (23)

	LPAREN  shift 40
	LBRACE  shift 41
	IF  shift 42
	WHILE  shift 43
	FOR  shift 44
	RETURN  shift 45
	NUM  shift 46
	BLIT  shift 47
	STRLIT  shift 48
	ID  shift 49
	RBRACE  reduce 23

	stmt_list  goto 55
	stmt  goto 51
	expr  goto 52


state 42
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (27)

	LPAREN  shift 56
	.  error


state 43
	stmt : WHILE . LPAREN expr RPAREN stmt  (28)

	LPAREN  shift 57
	.  error


state 44
	stmt : FOR . LPAREN expr SEMI expr SEMI expr RPAREN stmt  (29)

	LPAREN  shift 58
	.  error


state 45
	stmt : RETURN . expr SEMI  (30)

	LPAREN  shift 40
	NUM  shift 46
	BLIT  shift 47
	STRLIT  shift 48
	ID  shift 49
	.  error

	expr  goto 59


state 46
	expr : NUM .  (31)

	.  reduce 31


state 47
	expr : BLIT .  (32)

	.  reduce 32


state 48
	expr : STRLIT .  (33)

	.  reduce 33


state 49
	expr : ID .  (34)
	expr : ID . ASSIGN expr  (48)
	expr : ID . LPAREN args_opt RPAREN  (50)

	LPAREN  shift 60
	ASSIGN  shift 61
	SEMI  reduce 34
	RPAREN  reduce 34
	PLUS  reduce 34
	MINUS  reduce 34
	TIMES  reduce 34
	DIVIDE  reduce 34
	MOD  reduce 34
	EQ  reduce 34
	NEQ  reduce 34
	LESSER  reduce 34
	LESSEREQ  reduce 34
	GREATER  reduce 34
	GREATEREQ  reduce 34
	AND  reduce 34
	OR  reduce 34
	COMMA  reduce 34


state 50
	fdecl : vdecl LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list . RBRACE  (18)

	RBRACE  shift 62
	.  error


state 51
	stmt_list : stmt . stmt_list  (24)
	stmt_list : .  (23)

	LPAREN  shift 40
	LBRACE  shift 41
	IF  shift 42
	WHILE  shift 43
	FOR  shift 44
	RETURN  shift 45
	NUM  shift 46
	BLIT  shift 47
	STRLIT  shift 48
	ID  shift 49
	RBRACE  reduce 23

	stmt_list  goto 63
	stmt  goto 51
	expr  goto 52


state 52
	stmt : expr . SEMI  (25)
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . MOD expr  (39)
	expr : expr . EQ expr  (40)
	expr : expr . NEQ expr  (41)
	expr : expr . LESSER expr  (42)
	expr : expr . LESSEREQ expr  (43)
	expr : expr . GREATER expr  (44)
	expr : expr . GREATEREQ expr  (45)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)

	SEMI  shift 64
	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	MOD  shift 69
	EQ  shift 70
	NEQ  shift 71
	LESSER  shift 72
	LESSEREQ  shift 73
	GREATER  shift 74
	GREATEREQ  shift 75
	AND  shift 76
	OR  shift 77
	.  error


state 53
	vdecl_list : vdecl SEMI vdecl_list .  (12)

	.  reduce 12


state 54
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . MOD expr  (39)
	expr : expr . EQ expr  (40)
	expr : expr . NEQ expr  (41)
	expr : expr . LESSER expr  (42)
	expr : expr . LESSEREQ expr  (43)
	expr : expr . GREATER expr  (44)
	expr : expr . GREATEREQ expr  (45)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)
	expr : LPAREN expr . RPAREN  (49)

	RPAREN  shift 78
	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	MOD  shift 69
	EQ  shift 70
	NEQ  shift 71
	LESSER  shift 72
	LESSEREQ  shift 73
	GREATER  shift 74
	GREATEREQ  shift 75
	AND  shift 76
	OR  shift 77
	.  error


state 55
	stmt : LBRACE stmt_list . RBRACE  (26)

	RBRACE  shift 79
	.  error


state 56
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (27)

	LPAREN  shift 40
	NUM  shift 46
	BLIT  shift 47
	STRLIT  shift 48
	ID  shift 49
	.  error

	expr  goto 80


state 57
	stmt : WHILE LPAREN . expr RPAREN stmt  (28)

	LPAREN  shift 40
	NUM  shift 46
	BLIT  shift 47
	STRLIT  shift 48
	ID  shift 49
	.  error

	expr  goto 81


state 58
	stmt : FOR LPAREN . expr SEMI expr SEMI expr RPAREN stmt  (29)

	LPAREN  shift 40
	NUM  shift 46
	BLIT  shift 47
	STRLIT  shift 48
	ID  shift 49
	.  error

	expr  goto 82


state 59
	stmt : RETURN expr . SEMI  (30)
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . MOD expr  (39)
	expr : expr . EQ expr  (40)
	expr : expr . NEQ expr  (41)
	expr : expr . LESSER expr  (42)
	expr : expr . LESSEREQ expr  (43)
	expr : expr . GREATER expr  (44)
	expr : expr . GREATEREQ expr  (45)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)

	SEMI  shift 83
	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	MOD  shift 69
	EQ  shift 70
	NEQ  shift 71
	LESSER  shift 72
	LESSEREQ  shift 73
	GREATER  shift 74
	GREATEREQ  shift 75
	AND  shift 76
	OR  shift 77
	.  error


state 60
	expr : ID LPAREN . args_opt RPAREN  (50)
	args_opt : .  (51)

	LPAREN  shift 40
	NUM  shift 46
	BLIT  shift 47
	STRLIT  shift 48
	ID  shift 49
	RPAREN  reduce 51

	expr  goto 84
	args_opt  goto 85
	args  goto 86


state 61
	expr : ID ASSIGN . expr  (48)

	LPAREN  shift 40
	NUM  shift 46
	BLIT  shift 47
	STRLIT  shift 48
	ID  shift 49
	.  error

	expr  goto 87


state 62
	fdecl : vdecl LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE .  (18)

	.  reduce 18


state 63
	stmt_list : stmt stmt_list .  (24)

	.  reduce 24


state 64
	stmt : expr SEMI .  (25)

	.  reduce 25


state 65
	expr : expr PLUS . expr  (35)

	LPAREN  shift 40
	NUM  shift 46
	BLIT  shift 47
	STRLIT  shift 48
	ID  shift 49
	.  error

	expr  goto 88


state 66
	expr : expr MINUS . expr  (36)

	LPAREN  shift 40
	NUM  shift 46
	BLIT  shift 47
	STRLIT  shift 48
	ID  shift 49
	.  error

	expr  goto 89


state 67
	expr : expr TIMES . expr  (37)

	LPAREN  shift 40
	NUM  shift 46
	BLIT  shift 47
	STRLIT  shift 48
	ID  shift 49
	.  error

	expr  goto 90


state 68
	expr : expr DIVIDE . expr  (38)

	LPAREN  shift 40
	NUM  shift 46
	BLIT  shift 47
	STRLIT  shift 48
	ID  shift 49
	.  error

	expr  goto 91


state 69
	expr : expr MOD . expr  (39)

	LPAREN  shift 40
	NUM  shift 46
	BLIT  shift 47
	STRLIT  shift 48
	ID  shift 49
	.  error

	expr  goto 92


state 70
	expr : expr EQ . expr  (40)

	LPAREN  shift 40
	NUM  shift 46
	BLIT  shift 47
	STRLIT  shift 48
	ID  shift 49
	.  error

	expr  goto 93


state 71
	expr : expr NEQ . expr  (41)

	LPAREN  shift 40
	NUM  shift 46
	BLIT  shift 47
	STRLIT  shift 48
	ID  shift 49
	.  error

	expr  goto 94


state 72
	expr : expr LESSER . expr  (42)

	LPAREN  shift 40
	NUM  shift 46
	BLIT  shift 47
	STRLIT  shift 48
	ID  shift 49
	.  error

	expr  goto 95


state 73
	expr : expr LESSEREQ . expr  (43)

	LPAREN  shift 40
	NUM  shift 46
	BLIT  shift 47
	STRLIT  shift 48
	ID  shift 49
	.  error

	expr  goto 96


state 74
	expr : expr GREATER . expr  (44)

	LPAREN  shift 40
	NUM  shift 46
	BLIT  shift 47
	STRLIT  shift 48
	ID  shift 49
	.  error

	expr  goto 97


state 75
	expr : expr GREATEREQ . expr  (45)

	LPAREN  shift 40
	NUM  shift 46
	BLIT  shift 47
	STRLIT  shift 48
	ID  shift 49
	.  error

	expr  goto 98


state 76
	expr : expr AND . expr  (46)

	LPAREN  shift 40
	NUM  shift 46
	BLIT  shift 47
	STRLIT  shift 48
	ID  shift 49
	.  error

	expr  goto 99


state 77
	expr : expr OR . expr  (47)

	LPAREN  shift 40
	NUM  shift 46
	BLIT  shift 47
	STRLIT  shift 48
	ID  shift 49
	.  error

	expr  goto 100


state 78
	expr : LPAREN expr RPAREN .  (49)

	.  reduce 49


state 79
	stmt : LBRACE stmt_list RBRACE .  (26)

	.  reduce 26


state 80
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (27)
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . MOD expr  (39)
	expr : expr . EQ expr  (40)
	expr : expr . NEQ expr  (41)
	expr : expr . LESSER expr  (42)
	expr : expr . LESSEREQ expr  (43)
	expr : expr . GREATER expr  (44)
	expr : expr . GREATEREQ expr  (45)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)

	RPAREN  shift 101
	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	MOD  shift 69
	EQ  shift 70
	NEQ  shift 71
	LESSER  shift 72
	LESSEREQ  shift 73
	GREATER  shift 74
	GREATEREQ  shift 75
	AND  shift 76
	OR  shift 77
	.  error


state 81
	stmt : WHILE LPAREN expr . RPAREN stmt  (28)
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . MOD expr  (39)
	expr : expr . EQ expr  (40)
	expr : expr . NEQ expr  (41)
	expr : expr . LESSER expr  (42)
	expr : expr . LESSEREQ expr  (43)
	expr : expr . GREATER expr  (44)
	expr : expr . GREATEREQ expr  (45)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)

	RPAREN  shift 102
	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	MOD  shift 69
	EQ  shift 70
	NEQ  shift 71
	LESSER  shift 72
	LESSEREQ  shift 73
	GREATER  shift 74
	GREATEREQ  shift 75
	AND  shift 76
	OR  shift 77
	.  error


state 82
	stmt : FOR LPAREN expr . SEMI expr SEMI expr RPAREN stmt  (29)
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . MOD expr  (39)
	expr : expr . EQ expr  (40)
	expr : expr . NEQ expr  (41)
	expr : expr . LESSER expr  (42)
	expr : expr . LESSEREQ expr  (43)
	expr : expr . GREATER expr  (44)
	expr : expr . GREATEREQ expr  (45)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)

	SEMI  shift 103
	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	MOD  shift 69
	EQ  shift 70
	NEQ  shift 71
	LESSER  shift 72
	LESSEREQ  shift 73
	GREATER  shift 74
	GREATEREQ  shift 75
	AND  shift 76
	OR  shift 77
	.  error


state 83
	stmt : RETURN expr SEMI .  (30)

	.  reduce 30


state 84
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . MOD expr  (39)
	expr : expr . EQ expr  (40)
	expr : expr . NEQ expr  (41)
	expr : expr . LESSER expr  (42)
	expr : expr . LESSEREQ expr  (43)
	expr : expr . GREATER expr  (44)
	expr : expr . GREATEREQ expr  (45)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)
	args : expr .  (53)
	args : expr . COMMA args  (54)

	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	MOD  shift 69
	EQ  shift 70
	NEQ  shift 71
	LESSER  shift 72
	LESSEREQ  shift 73
	GREATER  shift 74
	GREATEREQ  shift 75
	AND  shift 76
	OR  shift 77
	COMMA  shift 104
	RPAREN  reduce 53


state 85
	expr : ID LPAREN args_opt . RPAREN  (50)

	RPAREN  shift 105
	.  error


state 86
	args_opt : args .  (52)

	.  reduce 52


state 87
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . MOD expr  (39)
	expr : expr . EQ expr  (40)
	expr : expr . NEQ expr  (41)
	expr : expr . LESSER expr  (42)
	expr : expr . LESSEREQ expr  (43)
	expr : expr . GREATER expr  (44)
	expr : expr . GREATEREQ expr  (45)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)
	expr : ID ASSIGN expr .  (48)

	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	MOD  shift 69
	EQ  shift 70
	NEQ  shift 71
	LESSER  shift 72
	LESSEREQ  shift 73
	GREATER  shift 74
	GREATEREQ  shift 75
	AND  shift 76
	OR  shift 77
	SEMI  reduce 48
	RPAREN  reduce 48
	COMMA  reduce 48


state 88
	expr : expr . PLUS expr  (35)
	expr : expr PLUS expr .  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . MOD expr  (39)
	expr : expr . EQ expr  (40)
	expr : expr . NEQ expr  (41)
	expr : expr . LESSER expr  (42)
	expr : expr . LESSEREQ expr  (43)
	expr : expr . GREATER expr  (44)
	expr : expr . GREATEREQ expr  (45)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)

	TIMES  shift 67
	DIVIDE  shift 68
	MOD  shift 69
	SEMI  reduce 35
	RPAREN  reduce 35
	PLUS  reduce 35
	MINUS  reduce 35
	EQ  reduce 35
	NEQ  reduce 35
	LESSER  reduce 35
	LESSEREQ  reduce 35
	GREATER  reduce 35
	GREATEREQ  reduce 35
	AND  reduce 35
	OR  reduce 35
	COMMA  reduce 35


state 89
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr MINUS expr .  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . MOD expr  (39)
	expr : expr . EQ expr  (40)
	expr : expr . NEQ expr  (41)
	expr : expr . LESSER expr  (42)
	expr : expr . LESSEREQ expr  (43)
	expr : expr . GREATER expr  (44)
	expr : expr . GREATEREQ expr  (45)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)

	TIMES  shift 67
	DIVIDE  shift 68
	MOD  shift 69
	SEMI  reduce 36
	RPAREN  reduce 36
	PLUS  reduce 36
	MINUS  reduce 36
	EQ  reduce 36
	NEQ  reduce 36
	LESSER  reduce 36
	LESSEREQ  reduce 36
	GREATER  reduce 36
	GREATEREQ  reduce 36
	AND  reduce 36
	OR  reduce 36
	COMMA  reduce 36


state 90
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr TIMES expr .  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . MOD expr  (39)
	expr : expr . EQ expr  (40)
	expr : expr . NEQ expr  (41)
	expr : expr . LESSER expr  (42)
	expr : expr . LESSEREQ expr  (43)
	expr : expr . GREATER expr  (44)
	expr : expr . GREATEREQ expr  (45)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)

	MOD  shift 69
	SEMI  reduce 37
	RPAREN  reduce 37
	PLUS  reduce 37
	MINUS  reduce 37
	TIMES  reduce 37
	DIVIDE  reduce 37
	EQ  reduce 37
	NEQ  reduce 37
	LESSER  reduce 37
	LESSEREQ  reduce 37
	GREATER  reduce 37
	GREATEREQ  reduce 37
	AND  reduce 37
	OR  reduce 37
	COMMA  reduce 37


state 91
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr DIVIDE expr .  (38)
	expr : expr . MOD expr  (39)
	expr : expr . EQ expr  (40)
	expr : expr . NEQ expr  (41)
	expr : expr . LESSER expr  (42)
	expr : expr . LESSEREQ expr  (43)
	expr : expr . GREATER expr  (44)
	expr : expr . GREATEREQ expr  (45)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)

	MOD  shift 69
	SEMI  reduce 38
	RPAREN  reduce 38
	PLUS  reduce 38
	MINUS  reduce 38
	TIMES  reduce 38
	DIVIDE  reduce 38
	EQ  reduce 38
	NEQ  reduce 38
	LESSER  reduce 38
	LESSEREQ  reduce 38
	GREATER  reduce 38
	GREATEREQ  reduce 38
	AND  reduce 38
	OR  reduce 38
	COMMA  reduce 38


state 92
	expr : expr . PLUS expr  (35)
	expr : expr . MINUS expr  (36)
	expr : expr . TIMES expr  (37)
	expr : expr . DIVIDE expr  (38)
	expr : expr . MOD expr  (39)
	expr : expr MOD expr .  (39)
	expr : expr . EQ expr  (40)
	expr : expr . NEQ expr  (41)
	expr : expr . LESSER expr  (42)
	expr : expr . LESSEREQ expr  (43)
	expr : expr . GREATER expr  (44)
	expr : expr . GREATEREQ expr  (45)
	expr : expr . AND expr  (46)
	expr : expr . OR expr  (47)

	.  reduce 39

